# RansomwareProject

./: CMakeLists.txt  README.md  config.bat  lancher.cs
AES/: AES.cs  CMakeLists.txt  Cipher.cs  StringParser.cs
Dropper/: CMakeLists.txt  Dropper.cs  DropperGUI.Designer.cs  DropperGUI.cs  DropperGUI.resx
Dropper/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
UI/: CMakeLists.txt  Form1.Designer.cs  Form1.cs  Form1.resx  Main.cs
UI/Properties/: AssemblyInfo.cs  Settings.Designer.cs
